--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
             <i class="fas fa-bars hamburgerMenu"></i>
           </label>
           <input id="toggleBlog" name="toggleBlog" type="checkbox" class="sr-only">
-          <ul>
+          <ul class="blogNav">
             <li><a href="./index.html">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="./blog.html">BLOG</a></li>
